# MLEbotics

./: .gitignore  END SESSION.bat  LAPTOP_SETUP.md  MLEbotics.code-workspace  SETUP.md  START SESSION.bat  end-session.ps1  setup-machine.ps1  start-session.ps1  test-session.txt
.claude/: settings.local.json
.github/workflows/: mlebotics-hub.yml  running-app.yml  tesla-checker.yml
ChromaShift/: ChromaShift.spec  README.md  build.bat  hotkeys.py  install.bat  main.py  overlay.py  profiles.py  pyproject.toml  settings_manager.py  startup.py  tray.py  ui.py
Running app/RunCompanion/: firebase.json
Running app/RunCompanion/windows/: CMakeLists.txt
_releases/hey-girl/: .env.example  Launch.bat  README.md  actions.py  agent.py  app.py  assignment_reader.py  conversation.py  cost_tracker.py  gui.py  main.py  memory.py  openai_agent.py  quiz_solver.py  requirements.txt  router.py  screen.py  server.py  voice.py
mlebotics-hub/: hub.py
mlebotics.com/: .gitignore  Dev Dashboard.lnk  dev-all.ps1  dev-dashboard.ps1  dev-restart.ps1  dev-server.ps1  firestore.rules  package.json  vercel.console.json
mlebotics.com/.github/: copilot-instructions.md
mlebotics.com/apps/console/: tailwind.config.ts  tsconfig.tsbuildinfo
mlebotics.com/dashboard/: dashboard.ps1  get-logs.ps1  get-status.ps1  kill-app.ps1  restart-app.ps1  ui-input.ps1  ui-render.ps1
mlebotics.com/tools/: run-workspace-workflow.mjs  start-all.ps1
scripts/: close-project.ps1  end-session.ps1  setup_tesla_checker_task.bat  start-session.ps1  tesla_checker_log.json  tesla_inventory_checker.py
(+54 files in other folders)
